[package]
name = "matfyz_showdown"
version = "0.1.0"
authors = ["Andrej Korman <andrejkorman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.1", features = ["blocking"]}
scraper = "*"
http = "*"
